openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-app
  labels:
    app: payment-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: payment-app
